--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- navbar start -->
     <div class="navbar bg-cyan-200">
       <div class="navbar-start ml-3">
-        <div class="w-1/4">
+        <div class="md:w-1/4">
           <p class="text-gray-900 text-3xl font-bold">Interactive</p>
           <p class="text-gray-900 text-xl font-medium">Geometry Book</p>
         </div>
@@ -35,9 +35,9 @@
     <!-- navbar end -->
     <!-- main area start -->
     <main>
-      <section class="grid grid-cols-3">
+      <section class="grid md:grid-cols-3 sm:grid-cols-1">
         <!-- geometry area -->
-        <div class="col-span-2 grid grid-cols-3 gap-4 ml-3.5 p-2">
+        <div class="md:col-span-2 grid md:grid-cols-3 sm:grid-cols-1 gap-4 ml-3.5 p-2">
           <!-- card area start -->
           <!-- cart-1 -->
           <div class="card w-full bg-base-100 shadow-2xl">
@@ -69,7 +69,7 @@
                 </div>
               </div>
               <div class="card-actions">
-                <button class="btn btn-wide bg-sky-500 text-xl font-bold">
+                <button class="btn bg-sky-500 text-xl font-bold">
                   Calculate
                 </button>
               </div>
@@ -104,7 +104,7 @@
                 </div>
               </div>
               <div class="card-actions">
-                <button class="btn btn-wide bg-sky-500 text-xl font-bold">
+                <button class="btn bg-sky-500 text-xl font-bold">
                   Calculate
                 </button>
               </div>
@@ -141,7 +141,7 @@
                 </div>
               </div>
               <div class="card-actions">
-                <button class="btn btn-wide bg-sky-500 text-xl font-bold">
+                <button class="btn bg-sky-500 text-xl font-bold">
                   Calculate
                 </button>
               </div>
@@ -180,7 +180,7 @@
                 </div>
               </div>
               <div class="card-actions">
-                <button class="btn btn-wide bg-sky-500 text-xl font-bold">
+                <button class="btn bg-sky-500 text-xl font-bold">
                   Calculate
                 </button>
               </div>
@@ -218,7 +218,7 @@
                 </div>
               </div>
               <div class="card-actions">
-                <button class="btn btn-wide bg-sky-500 text-xl font-bold">
+                <button class="btn bg-sky-500 text-xl font-bold">
                   Calculate
                 </button>
               </div>
@@ -253,7 +253,7 @@
                 </div>
               </div>
               <div class="card-actions">
-                <button class="btn btn-wide bg-sky-500 text-xl font-bold">
+                <button class="btn bg-sky-500 text-xl font-bold">
                   Calculate
                 </button>
               </div>
