decimal point added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="navbar-end mr-3">
-        <a class="btn bg-blue-700">Blog</a>
+        <a id="blog-btn" class="btn bg-blue-700">Blog</a>
       </div>
     </div>
     <!-- navbar end -->
